--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="column">
           <div class="column-2 bg-light">
             <h2>Broj Telefona : 062 / 313 973</h2>
-            <form action="" class="callback-form">
+            <form name="contact" action="" class="callback-form" method="POST" data-netlify="true">
               <div class="form-control">
                 <label for="name"></label>
                 <input type="text" name="name" id="name" placeholder="Enter name">
